Set z-index to prevent tooltip icon from being visible through modal.

--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -5,6 +5,7 @@
   display: inline-block;
   position: relative;
   opacity: 1;
+  z-index: 1;
 
   &:hover {
     cursor: pointer;
